Fix a few layout bugs

--- a/disasterinfosite/static/style/_snugget-content.scss
+++ b/disasterinfosite/static/style/_snugget-content.scss
@@ -65,7 +65,7 @@
 }
 
 .section-content--static {
-  max-height: unset;
+  max-height: none;
   position: relative;
   overflow: visible;
 }
